// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Launch when a launch is failed renders it failed 1`] = `
<div
  className="root"
>
  <WithStyles(Paper)
    className="launch"
  >
    <WithStyles(Typography)
      className="missionName"
      noWrap={true}
    >
      Test
    </WithStyles(Typography)>
    <WithStyles(Typography)
      color="textSecondary"
      noWrap={true}
    >
      2019-01-01
    </WithStyles(Typography)>
  </WithStyles(Paper)>
  <div
    className="divider"
  />
  <WithStyles(Paper)
    className="status fail"
    elevation={1}
  >
    <pure(GroupWorkRoundedIcon)
      className="statusIcon"
    />
  </WithStyles(Paper)>
</div>
`;

exports[`Launch when a launch is successful renders it successful 1`] = `
<div
  className="root"
>
  <WithStyles(Paper)
    className="launch"
  >
    <WithStyles(Typography)
      className="missionName"
      noWrap={true}
    >
      Test
    </WithStyles(Typography)>
    <WithStyles(Typography)
      color="textSecondary"
      noWrap={true}
    >
      2019-01-01
    </WithStyles(Typography)>
  </WithStyles(Paper)>
  <div
    className="divider"
  />
  <WithStyles(Paper)
    className="status success"
    elevation={1}
  >
    <pure(GroupWorkRoundedIcon)
      className="statusIcon"
    />
  </WithStyles(Paper)>
</div>
`;

exports[`Launch when a launch is upcoming renders it upcoming 1`] = `
<div
  className="root"
>
  <WithStyles(Paper)
    className="launch"
  >
    <WithStyles(Typography)
      className="missionName"
      noWrap={true}
    >
      Test
    </WithStyles(Typography)>
    <WithStyles(Typography)
      color="textSecondary"
      noWrap={true}
    >
      2019-01-01
    </WithStyles(Typography)>
  </WithStyles(Paper)>
  <div
    className="divider"
  />
  <WithStyles(Paper)
    className="status upcoming"
    elevation={1}
  >
    <pure(GroupWorkRoundedIcon)
      className="statusIcon"
    />
  </WithStyles(Paper)>
</div>
`;

exports[`Launch when reverse renders it reverse 1`] = `
<div
  className="root rootReverse"
>
  <WithStyles(Paper)
    className="launch"
  >
    <WithStyles(Typography)
      className="missionName"
      noWrap={true}
    >
      Test
    </WithStyles(Typography)>
    <WithStyles(Typography)
      color="textSecondary"
      noWrap={true}
    >
      2019-01-01
    </WithStyles(Typography)>
  </WithStyles(Paper)>
  <div
    className="divider"
  />
  <WithStyles(Paper)
    className="status success statusReverse"
    elevation={1}
  >
    <pure(GroupWorkRoundedIcon)
      className="statusIcon"
    />
  </WithStyles(Paper)>
</div>
`;
